# Uniproxy

./: .gitignore  README-pypi.md  README.md  pyproject.toml  test.py
proxverter/: __init__.py  linux_proxy.py  mac_proxy.py  shell_env_var.py  sysprox.py  win_proxy.py
proxverter/test/: test.py
uniproxy/: __init__.py  linux_proxy.py  mac_proxy.py  shell_env_var.py  win_proxy.py
uniproxy/test/: test.py
